--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-Hello World
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8" />
+    <title>我的个人主页</title>
+    <style>
+        body {
+            font-family: "微软雅黑", Arial, sans-serif;
+            background-color: #f9f9f9;
+            color: #333;
+            padding: 20px;
+        }
+        h1 {
+            color: #007acc;
+        }
+        ul {
+            list-style-type: square;
+        }
+        li {
+            margin-bottom: 5px;
+        }
+    </style>
+</head>
+<body>
+    <h1>欢迎来到我的网站</h1>
+    <p>这是我的第一个GitHub Pages网站。</p>
+    <ul>
+        <li>姓名：HH</li>
+        <li>专业：大数据管理与应用</li>
+        <li>爱好：电影、吉他、健身、篮球、编程</li>
+    </ul>
+</body>
+</html>
+
