--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         }
 
         body {
-            font-family: 'LXGWWenKai', "微软雅黑", Arial, sans-serif;
+            font-family: 'LXGWWenKai', Arial, sans-serif;
             background: linear-gradient(135deg, #a0c1ff, #f0f4ff);
             margin: 0;
             padding: 0;
@@ -103,9 +103,9 @@
             <li><strong>爱好：</strong>电影、吉他、健身、篮球、编程</li>
         </ul>
         <div class="social-links">
-            <a href="https://github.com/你的用户名" target="_blank" rel="noopener noreferrer">GitHub</a>
-            <a href="https://weibo.com/你的用户名" target="_blank" rel="noopener noreferrer">微博</a>
-            <a href="mailto:你的邮箱@example.com">邮箱</a>
+            <a href="https://github.com/CS-Trekker" target="_blank" rel="noopener noreferrer">GitHub</a>
+            <a href="mailto:2400016629hh@gmail.com">邮箱</a>
+            <a href="https://www.linkedin.com/in/huhaopku/" target="_blank" rel="noopener noreferrer">领英</a>
         </div>
     </main>
     <footer>
